--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
                 <input type="number" id="age" name="age" required>
             </div>
             <!-- Add other fields similarly -->
-            <button type="submit">Check Risk</button>
+            <button type="submit details">Check Risk</button>
         </form>
         <div id="result" class="result"></div>
     </div>
